corrected orphorgaphy

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,9 @@
 $accent-color: #FF6B09;
-$bg-color-wtihe: #FFFFFF;
+$bg-color-white: #FFFFFF;
 $bg-color-dark: #111518;
 $bg-color-lightgrey: #F1F1F1;
 
 $text-color-dark: #111518;
 $text-color-lightgrey: #B9B9B9;
-$text-color-wtihe: #FFFFFF;
+$text-color-white: #FFFFFF;
 $text-color-grey: #3D3D3D;
